--- a/ProductShop/Views/Product/EditProduct.cshtml
+++ b/ProductShop/Views/Product/EditProduct.cshtml
@@ -1,13 +1,13 @@
 ﻿@model ProductShop.Models.Product
 
 @{
-    ViewBag.Title = "AddProduct";
+    ViewBag.Title = "EditProduct";
 }
 
-<h2>AddProduct</h2>
+<h2>EditProduct</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
@@ -15,6 +15,8 @@
         <h4>Product</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.ProductId)
+
         <div class="form-group">
             @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -65,7 +67,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
