--- a/ProductShop/Views/Product/Index.cshtml
+++ b/ProductShop/Views/Product/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<ProductShop.Models.Product>
 
 @{
-    ViewBag.Title = "Product store!";
+    ViewBag.Title = "Welcome to Product store!";
 }
 
-<h2>Index</h2>
+<h2>Product store</h2>
 
 <p>
-    @Html.ActionLink("Create New", "AddProduct")
+    @Html.ActionLink("Add new product", "AddProduct")
 </p>
 <p>
     @Html.ActionLink("Edit", "EditProduct") 
