--- a/ProductShop/Views/Product/DetailsProduct.cshtml
+++ b/ProductShop/Views/Product/DetailsProduct.cshtml
@@ -25,7 +25,13 @@
         <dd>
             @Html.DisplayFor(model => model.Quantity)
         </dd>
+        <dt>
+             @Html.DisplayNameFor(model => model.Meausure)
+        </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.Meausure)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.Price)
         </dt>
