--- a/ProductShop/Views/Product/DeleteProduct.cshtml
+++ b/ProductShop/Views/Product/DeleteProduct.cshtml
@@ -11,12 +11,12 @@
 
 <div class="form-actions no-color">
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
-Delete    </button>
+        Delete    
+    </button>
 
 </div>
     }
 
-</div>
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
