--- a/ProductShop/Views/Product/Index.cshtml
+++ b/ProductShop/Views/Product/Index.cshtml
@@ -19,6 +19,9 @@
             @Html.DisplayNameFor(model => model.Quantity)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.Meausure)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Price)
         </th>
         <th>
@@ -43,6 +46,9 @@
                 @Html.DisplayFor(modelItem => item.Quantity)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.Meausure)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
@@ -57,7 +63,7 @@
             <td>
                 @Html.ActionLink("Edit", "EditProduct", new { id = item.ProductId }) |
                 @Html.ActionLink("Details", "DetailsProduct", new { id = item.ProductId }) |
-                <a data-toggle="modal" data-target="#exampleModal" id=@item.ProductId class="del">
+                <a data-toggle="modal" data-target="#exampleModal" id=@item.ProductId class="del" >
                     Delete
                 </a>
 
