--- a/ProductShop/Views/Product/Index.cshtml
+++ b/ProductShop/Views/Product/Index.cshtml
@@ -61,10 +61,10 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.ActionLink("Edit", "EditProduct", new { id = item.ProductId }) |
-                @Html.ActionLink("Details", "DetailsProduct", new { id = item.ProductId }) |
-                <a data-toggle="modal" data-target="#exampleModal" id=@item.ProductId class="del" >
-                    Delete
+                @Html.ActionLink("Edit✍️", "EditProduct", new { id = item.ProductId }) |
+                @Html.ActionLink("Details🔧", "DetailsProduct", new { id = item.ProductId }) |
+                <a data-toggle="modal" data-target="#exampleModal" id=@item.ProductId class="del">
+                   Delete🗑
                 </a>
 
             </td>
